--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 
 <head>
     <title>Страница Интернета</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,
+    maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <h1>ПРевет</h1>
+    <h1 style="font-size: 50px;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam facere rem nesciunt
+        delectus laborum recusandae,
+        voluptate ipsa nihil. Minima vel quod aliquam tenetur labore cupiditate, placeat vitae autem aperiam minus.</h1>
     <script src="js/main.js"></script>
 </body>
 
